<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_1"
    app:titleTextColor="@color/white"
    android:foregroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Switch
            android:id="@+id/cameraFlash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cameraFlash"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

        <androidx.slidingpanelayout.widget.SlidingPaneLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/image_quality"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <cz.utb.photostudio.util.CustomSeekBar
                android:id="@+id/pictureQuality"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:min="1"
                android:max="100"
                android:progressDrawable="@android:color/transparent"/>
        </LinearLayout>

        <androidx.slidingpanelayout.widget.SlidingPaneLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <Switch
            android:id="@+id/objDetection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_detection"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/apply_and_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_and_back"
            android:textColor="#FFFFFFFF"
            android:textColorHint="@color/white" />

        <Space
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="#FFFFFFFF"
            android:textColorHint="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>